Fixed line break spacing

--- a/src/assets/style/PageTemplate.css
+++ b/src/assets/style/PageTemplate.css
@@ -263,6 +263,8 @@ button.home:hover {
 
 hr.solid {
   border-top: 1px solid #bbb;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .footer {
